Refactor: trading-domain scenarios, runtime-neutral slides + deck